grammar.txt
score: details instruments | instruments

details: detail string details

detail: "author:" | "tempo:" | "timesignature:" | "title:"

instruments: instrument instruments | instrument

instrument: "snare:" snareMusic | "bass:" bassTenorMusic | "tenor:" bassTenorMusic | "cymbal:" cymbalMusic


// snare
snareMusic: snareMeasure "|" snareMusic | snareMeasure

snareMeasure: snareBeat space* snareMeasure | snareBeat

// can put in simultaneous here when need to for cymbal stuff
snareBeat: snareNote snareBeat | snareNote

snareNote: snareModifers snareSurface | snareSurface

snareModifiers: snareModifier snareModifiers | snareModifier

snareModifier: [PMF] | [,-=]

snareSurface: [rlxXyYrRsS] | '.'


// bass and tenors
bassTenorMusic: bassTenorMeasure "|" bassTenorMusic | bassTenorMeasure

bassTenorMeasure: bassTenorBeat space* bassTenorMeasure | bassTenorBeat

// gar ... get the combos right is a bitch
bassTenorBeat: "(" bassTenorSimultaneousNotes ")" bassTenorBeat | "{" bassTenorSticking "}" bassTenorSurface more? | bassTenorNote bassTenorBeat | bassTenorNote

bassTenorSimultaneousNotes: bassTenorNote bassTenorSimultaneousNotes | bassTenorNote

bassTenorSticking: [rl] bassTenorSticking | [rl]

bassTenorNote: bassTenorModifers bassTenorSurface | bassTenorSurface

bassTenorModifiers: bassTenorModifier bassTenorModifiers | bassTenorModifier

bassTenorModifier: [PMF] | [,-=]

bassTenorSurface: [aAbBcCdDeEuU] | '.'



tuplet_begin: "["

tuplet_end: "]"

string: [a-zA-Z0-9_-]+ | '"' .* '"'
